created reusable banner, fixed logo and nav, footer

--- a/about-us.pug
+++ b/about-us.pug
@@ -5,4 +5,8 @@ block title
 
 block content
   +header()
-  +section-establishment()
+  //- +section-establishment()
+  +section-contact-us()
+  +section-contact-us()
+  +section-contact-us()
+  +footer()
