--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,7 +2,7 @@
 $c-darker-grey: #262626;
 $c-light-pink: #f2505d;
 $c-light-grey: #404040;
-$c-light-dark: #222222;
+$c-shadowy: #222222;
 $c-light-red: #f25252;
 $c-red: #f20707;
 $c-white: #fff;
