--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,6 +1,6 @@
 .c-footer {
   min-height: 200px;
-  background-color: $c-light-dark;
+  background-color: $c-shadowy;
 
   &__wrapper {
     @include containerGlobal;
