--- a/src/_includes/components/banner.pug
+++ b/src/_includes/components/banner.pug
@@ -15,5 +15,5 @@ mixin banner(args)
           href: './index.html',
           lightText: true,
           button: false,
-          text: 'Read Our Statement',
+          text: 'Contact Support',
         })
