--- a/index.css
+++ b/index.css
@@ -87,6 +87,10 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  color: #fff;
+}
+
 ul {
   list-style: none;
   padding: 0;
@@ -106,6 +110,7 @@ svg {
 .e-logo {
   width: 100%;
   height: 100%;
+  color: #fff;
 }
 
 .e-logo__wrapper {
@@ -122,10 +127,6 @@ svg {
           align-items: center;
 }
 
-.e-logo__text {
-  color: #fff;
-}
-
 .e-logo__svg {
   width: 100%;
   height: 100%;
@@ -136,7 +137,6 @@ svg {
 .e-link {
   width: 100%;
   height: 100%;
-  display: block;
 }
 
 .e-link--lighter-text {
@@ -294,7 +294,15 @@ svg {
   background-size: cover;
   background-position: center center;
   min-height: 550px;
-  padding: 100px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (max-width: 479px) {
+  .c-banner {
+    background-position: 0px 0px, 80% 50%;
+  }
 }
 
 .c-banner__wrapper {
@@ -302,6 +310,7 @@ svg {
   padding: 0 50px;
   margin: 0 auto;
   width: 100%;
+  margin: 100px auto 0 auto;
 }
 
 .c-banner__info {
