--- a/src/_includes/components/section-contact-us.pug
+++ b/src/_includes/components/section-contact-us.pug
@@ -4,7 +4,7 @@ mixin section-contact-us(args)
 
   .c-section-contact-us
     +banner({
-        style: 'background-image: url(./assets/images/section-contact-us.jpg)',
+        style: 'background-image: linear-gradient(360deg, rgb(34, 34, 34), rgba(34, 34, 34, 0)), url(./assets/images/section-contact-us.jpg)',
         infoClass: '--flex-end',
         infoHeader: 'Need Help?',
         infoText: "Need help or assistance? Our team is standing by to make sure you get the help you need. Whether you need to adjust an order or delivery details, we're ready to help!"
