--- a/scss/components/_loading.scss
+++ b/scss/components/_loading.scss
@@ -38,7 +38,7 @@ body {
   color: white;
   line-height: 12pt;
 }
-.loading-2-text {1
+.loading-2-text {
   background-image: url("../../assets/images/red.jpeg");
   width: 473px;
   height: 97px;
