Fixed fonts, loading, simptip

--- a/scss/components/_loading.scss
+++ b/scss/components/_loading.scss
@@ -39,7 +39,7 @@ body {
   line-height: 12pt;
 }
 .loading-2-text {
-  background-image: url("../../assets/images/red.jpeg");
+  background-image: url("./assets/images/red.jpeg");
   width: 473px;
   height: 97px;
   display: inline-block;
