--- a/scss/components/_loading.scss
+++ b/scss/components/_loading.scss
@@ -61,7 +61,7 @@ body {
   }
 }
 .wave {
-  background-image: url("../../assets/images/red.jpeg");
+  background-image: url("./assets/images/red.jpeg");
   @include background-clip(text);
   color: rgba(0, 0, 0, 0);
   text-shadow: 0px 0px rgba(255, 255, 255, 0.06);
