--- a/scss/components/_loading.scss
+++ b/scss/components/_loading.scss
@@ -21,6 +21,16 @@ body {
   top: 45%;
   bottom: 0;
   display: block;
+
+  @include media("<tablet") {
+    font-size: 60pt;
+    height: 90px;
+  }
+
+  @include media("<phone") {
+    font-size: 40pt;
+    height: 80px;
+  }
 }
 
 .loading-2 {
@@ -66,10 +76,20 @@ body {
   color: rgba(0, 0, 0, 0);
   text-shadow: 0px 0px rgba(255, 255, 255, 0.06);
   animation: wave-animation 2s infinite linear,
-    loading-animation 10s infinite linear alternate;
+    loading-animation 5s infinite linear alternate;
   background-size: 200px 100px;
   background-repeat: repeat-x;
   opacity: 1;
+
+  @include media("<tablet") {
+    animation: wave-animation 2s infinite linear,
+      loading-animation 7.5s infinite linear alternate;
+  }
+
+  @include media("<phone") {
+    animation: wave-animation 2s infinite linear,
+      loading-animation 10s infinite linear alternate;
+  }
 }
 .wave-2 {
   @include background-clip(initial);
