--- a/scss/components/_section-advantages.scss
+++ b/scss/components/_section-advantages.scss
@@ -36,6 +36,11 @@
     flex: 0 0 25%;
     padding: 0 35px;
     margin-bottom: 15px;
+
+    @include media("<desktop") {
+      flex: 1 0 50%;
+      min-width: 250px;
+    }
   }
 }
 
