--- a/index.pug
+++ b/index.pug
@@ -17,12 +17,7 @@ block loading
 
 block content
   +header()
-  +banner({
-    style: `background-image: url('./assets/images/banner1.jpg')`,
-    alt: 'man on mountain',
-    infoHeader: 'Serving you since 1989.',
-    infoText: "Acme Outdoors is an outdoor and adventure shop located in the Boathouse District in Oklahoma City."
-  })
+  +section-banner-home()
   +banner({
     style: `background-image: url('./assets/images/banner2.jpg')`,
     alt: 'man on mountain and tree',
