--- a/src/_includes/elements/link.pug
+++ b/src/_includes/elements/link.pug
@@ -1,5 +1,6 @@
 mixin link(args)
   - let href = args.href || '#';
+  // TODO buttonMode
   - let button = args.button || false;
   - let buttonColor = args.buttonColor || 'white';
   - let text = args.text || 'Default link text';
