--- a/src/_includes/components/banner.pug
+++ b/src/_includes/components/banner.pug
@@ -16,7 +16,7 @@ mixin banner(args={})
       // TODO delete class .c-banner__info
       .c-banner__info
         // TODO rename to .c-banner__title
-        h2.c-banner__info__main-title.d-inline-block=infoHeader
+        h2.c-banner__title.d-inline-block=infoHeader
         // TODO rename to .c-banner__subtitle
         h4.c-banner__info__sub-title.d-inline-block=infoText
         +link({
