--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -24,7 +24,7 @@
       margin: 0 0 20px;
     }
 
-    &__sub-title {
+    &__title {
       font-family: "sen-regular";
       font-size: $fs-sub + px;
       line-height: $lh-big;
