--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -17,19 +17,25 @@
     // TODO move to global wrapper
     margin: 0 auto;
   }
+
   &__logo {
     // TODO improve height and display
-    height: 100%;
-    display: block;
     width: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-    &__wrapper {
-      // TODO move all styles to wrapper
-      width: 100%;
+  &__navigation{
+    width: fit-content;
+    height: 50px;
+
+    &__wrapper{
       height: 100%;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
+
     }
   }
 }
