--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -1,15 +1,4 @@
 .c-navigation {
-  width: fit-content;
-  max-width: 1200px;
-  height: 50px;
-  
-  &__wrapper {
-    // width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
 
   &__list{
     display: flex;
@@ -19,14 +8,13 @@
 
   &__item {
     min-width: 70px;
-    height: 100%;
     text-align: center;
     font-size: em(15);
     padding-left: 50px;
   }
 
   @include media("<tablet") {
-    &__wrapper {
+    &__list {
       width: 100%;
       height: 100%;
 
