--- a/src/_includes/components/header.pug
+++ b/src/_includes/components/header.pug
@@ -4,18 +4,13 @@ mixin header()
     .c-header__wrapper.wrapper
 
       //- Logo
-      .c-header__logo
-        // TODO delete wrapper
-        .c-header__logo__wrapper                                
+      .c-header__logo                         
           +logo({
             whiteMode: true,
           })
 
       //- Navigation list
-      // TODO add wrapper
-      +navigation()
-
-      //- Burger menu
-      // TODO move to navigation
-      .c-header__burger-menu
-        +burger-menu()
+      .c-header__navigation 
+        .c-header__navigation__wrapper
+          +navigation()
+          +burger-menu()
