Add new classes

--- a/index.pug
+++ b/index.pug
@@ -19,7 +19,7 @@ block content
   +header()
   +banner()
   +section-about-us()
-  +section-advantages()
+  //- +section-advantages()
   +section-establishment()
   +footer()
 
