--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -5,6 +5,6 @@
 @import "./banner";
 @import "./section-services";
 @import "./section-about-us";
-@import "./section-advantages";
+// @import "./section-advantages";
 @import "./section-establishment";
 @import "./section-contact-us";
