--- a/src/_includes/elements/logo.pug
+++ b/src/_includes/elements/logo.pug
@@ -6,4 +6,4 @@ mixin logo(args)
       .e-logo__wrapper
         svg(class="icon icon-logo").e-logo__svg
           use(xlink:href="#icon-logo")
-        span BEETROOTERS 
+        span.e-logo__text BEETROOTERS 
