--- a/about-us.css
+++ b/about-us.css
@@ -628,7 +628,7 @@ svg {
 }
 
 .e-logo__svg {
-  min-width: 75px;
+  max-width: 75px;
   width: 100%;
   height: 100%;
   -webkit-animation: rotate 20s infinite linear;
@@ -918,6 +918,7 @@ svg {
 .section-advantages__header {
   position: relative;
   margin-bottom: 55px;
+  padding: 0 50px;
 }
 
 .section-advantages__title {
