finished section-services

--- a/index.pug
+++ b/index.pug
@@ -20,7 +20,7 @@ block content
 
   //- +banner()
   +section-advantages()
-  +section-establishment()
+  //- +section-establishment()
   +section-services
   +footer()
 
