--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,4 +1,3 @@
-@import './loading';
 @import "./header";
 @import "./footer";
 @import "./navigation";
@@ -7,3 +6,4 @@
 @import "./section-advantages";
 @import "./section-establishment";
 @import "./section-contact-us";
+@import "./service-card";
