--- a/src/_includes/components/section-services.pug
+++ b/src/_includes/components/section-services.pug
@@ -15,7 +15,7 @@ mixin section-services()
         .c-service-content__wrapper
           //- first
           .c-service-content__item
-            .c-service-content__service-card__wrapper
+            .c-service-content__service-card
               +service-card({
                 number:'01',
                 text:'SHOP PRODUCTS',
@@ -24,20 +24,20 @@ mixin section-services()
             p.c-service-content__description Our full product line is still available online here on our site! Getting outside and hiking is still something you can do. Get your gear now!
           //- second
           .c-service-content__item
-            .c-service-content__service-card__wrapper
+            .c-service-content__service-card
               +service-card({
                 number:'02',
                 text:'DONATE',
-                svg:''
+                svg:'rectangle'
                 })   
             p.c-service-content__description Since we've changed the way we operate to online only, and to ensure your safety, not all our staff is working. Donate to keep them afloat.
           //- three
           .c-service-content__item
-            .c-service-content__service-card__wrapper
+            .c-service-content__service-card
               +service-card({
                 number:'03',
                 text:'BUY GIFT CARDS',
-                svg:''
+                svg:'triangle'
               })
             p.c-service-content__description Have all the outdoor gear you need for now? Buy a gift card and use it later or share it with friends and family.
         
