--- a/index.css
+++ b/index.css
@@ -628,7 +628,7 @@ svg {
 }
 
 .e-logo__svg {
-  max-width: 75px;
+  min-width: 75px;
   width: 100%;
   height: 100%;
   -webkit-animation: rotate 20s infinite linear;
@@ -800,6 +800,18 @@ svg {
 
 .c-footer__top {
   padding-top: 25px;
+}
+
+@media (max-width: 479px) {
+  .c-footer__top {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .c-navigation__list {
