--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -16,5 +16,9 @@
   }
   &__top {
     padding-top: 25px;
+    @include media ('<phone'){
+      flex-direction: column;
+      align-items: center;
+    }
   }
 }
