--- a/scss/elements/_logo.scss
+++ b/scss/elements/_logo.scss
@@ -18,7 +18,7 @@
   }
   
   &__svg {
-    max-width: 75px;
+    min-width: 75px;
     width: 100%;
     height: 100%;
     animation: rotate 20s infinite linear;
