--- a/src/_includes/components/footer.pug
+++ b/src/_includes/components/footer.pug
@@ -4,10 +4,8 @@ mixin footer()
       .c-footer__top.d-flex.justify-content-between
         .c-footer__logo
           .c-footer__logo__wrapper.d-flex.align-items-center
-            +logo({
-              whiteMode: ''
-            })
-        .social-link
+            +logo()
+        .c-footer__social-link
           +social-link({href:"https://twitter.com/?lang=ru", icon: "fa-twitter", target: "_blank"})
           +social-link({href:"https://facebook.com", icon: "fa-facebook", target: "_blank"})
           +social-link({href:"https://www.instagram.com/", icon: "fa-instagram", target: "_blank"})
