Fixed loading and compass resource link

--- a/src/_includes/components/loading.pug
+++ b/src/_includes/components/loading.pug
@@ -1,9 +1,9 @@
 mixin loading()
-  .loading(class="wave")
+  .loading.wave
     | Loading
 
   //- For Firefox
-  //- .loading(class="loading-2 wave wave-2")
+  //- .loading.loading-2.wave.wave-2
   //-   .ff
   //-     | For browsers that don't support background-clip:text:
   //-   .loading-2-text
