--- a/scss/components/_loading.scss
+++ b/scss/components/_loading.scss
@@ -1,12 +1,5 @@
-@import "./node_modules/compass-mixins/lib/compass";
-
-$background-color: #141414;
-body {
-  background: $background-color;
-  width: 100%;
-  height: 100%;
-}
 .loading {
+  background: #141414;
   text-transform: uppercase;
   font-family: "Cabin Condensed", sans-serif;
   font-weight: bold;
