--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,14 +1,10 @@
-<<<<<<< HEAD
-// @import "./loading";
-=======
-// @import './loading';
->>>>>>> 1823e90639af12ad85e0fa8fbca9e445af721ed1
+@import './loading';
 @import "./header";
 @import "./footer";
 @import "./navigation";
 @import "./banner";
 @import "./section-services";
 @import "./section-about-us";
-// @import "./section-advantages";
+@import "./section-advantages";
 @import "./section-establishment";
 @import "./section-contact-us";
