--- a/src/_includes/components/index.pug
+++ b/src/_includes/components/index.pug
@@ -7,5 +7,5 @@ include ./section-services
 include ./section-about-us
 include ./section-establishment
 include ./section-contact-us
-//- include ./section-advantages
+include ./section-advantages
 
