--- a/src/_includes/components/navigation.pug
+++ b/src/_includes/components/navigation.pug
@@ -20,13 +20,6 @@ mixin navigation()
           +link({
             href: './contact.html',
             button: false,
-            text: 'Else',
-            lightText: true
-          })
-        li.c-navigation__item 
-          +link({
-            href: './index.html',
-            button: false,
-            text: 'Home',
+            text: 'Contact',
             lightText: true
           })
