--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -2,26 +2,23 @@
   @include backgroundCoverCenter;
   min-height: 550px;
 
-  @include media ('<phone') {
+  @include media("<phone") {
     background-position: 0px 0px, 80% 50%;
   }
 
-  
   &__wrapper {
     margin: 130px auto 0 auto;
 
     &--width-mode {
-
       .c-banner {
-
-        &__info{
+        &__info {
           max-width: 535px;
         }
-        
+
         &__title {
           font-size: $fs-h2 + px;
         }
-  
+
         &__sub-title {
           max-width: 425px;
         }
@@ -32,7 +29,6 @@
   &__info {
     max-width: 420px;
     width: 100%;
-
 
     &__main-title {
       font-family: "sen-bold";
@@ -47,4 +43,5 @@
       line-height: $lh-big;
       margin-bottom: 30px;
     }
+  }
 }
