--- a/index.pug
+++ b/index.pug
@@ -18,9 +18,9 @@ block loading
 block content
   +header()
 
-  //- +banner()
+  +banner()
   +section-advantages()
-  //- +section-establishment()
+  +section-establishment()
   +section-services
   +footer()
 
