--- a/scss/plugins/_index.scss
+++ b/scss/plugins/_index.scss
@@ -1,8 +1,8 @@
-// ! Bootstrap
+//  Bootstrap
 // @import './bootstrap/bootstrap';
 
 //- Simptip tooltip
-// @import "./simptip";
+@import "./simptip";
 
 //- Compass mixins
 @import "../../node_modules/compass-mixins/lib/compass";
