--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -4,7 +4,7 @@
   display: flex;
   // background-position: 0px 0px, 50% 50%;
 
-  @include media ('<phone') {
+  @include media("<phone") {
     background-position: 0px 0px, 80% 50%;
   }
 
@@ -18,14 +18,14 @@
     width: 100%;
 
     &__main-title {
-      font-family: "sen-bold";
+      font-family: "Sen-Bold";
       font-size: $fs-h1 + px;
       line-height: $lh-base;
       margin: 0 0 20px;
     }
 
     &__sub-title {
-      font-family: "sen-regular";
+      font-family: "Sen-Regular";
       font-size: $fs-sub + px;
       line-height: $lh-big;
       margin-bottom: 30px;
@@ -33,7 +33,6 @@
   }
 
   .more-width {
-
     .c-banner__info {
       max-width: 550px;
 
