--- a/scss/components/_section-establishment.scss
+++ b/scss/components/_section-establishment.scss
@@ -2,11 +2,11 @@
   padding: 165px 0;
 
   &__wrapper {
-    font-family: "sen-regular";
+    font-family: "Sen-Regular";
     max-width: 1300px;
     display: flex;
   }
-  
+
   &__media {
     border: 1px solid black;
     background-color: white;
@@ -30,7 +30,7 @@
     z-index: 1;
 
     &-title {
-      font-family: "sen-bold";
+      font-family: "Sen-Bold";
       font-size: 32px;
     }
 
