--- a/scss/components/_section-services.scss
+++ b/scss/components/_section-services.scss
@@ -1,5 +1,5 @@
 .c-section-services {
-  font-family: "sen-regular";
+  font-family: "Sen-Regular";
   justify-content: center;
   padding-bottom: 65px;
   align-items: center;
@@ -15,72 +15,72 @@
     padding-left: 15px;
     display: flex;
     width: 100%;
-  } 
-    &__info {
+  }
+  &__info {
+    justify-content: space-between;
+    display: flex;
+    margin-bottom: 50px;
+    padding: 0 10px 0 10px;
+    @include media("<desktop") {
+      flex-direction: column;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+    &__title {
+      margin-right: 50px;
+      line-height: 1.2;
+      max-width: 500px;
+      @include media("<desktop") {
+        margin-right: 0;
+        max-width: 700px;
+        margin-bottom: 20px;
+      }
+    }
+    h2 {
+      font-family: "Sen-Bold";
+      font-size: 40px;
+    }
+    &__subtitle {
+      max-width: 450px;
+      @include media("<desktop") {
+        max-width: 700px;
+      }
+    }
+  }
+  // content
+  .c-service-content {
+    width: 100%;
+    &__wrapper {
       justify-content: space-between;
       display: flex;
-      margin-bottom: 50px;
-      padding: 0 10px 0 10px;
-      @include media ('<desktop'){
-        flex-direction: column;
-        max-width: 700px;
-        margin: 0 auto; 
-        }
-      &__title {
-        margin-right: 50px;
-        line-height: 1.2;
-        max-width: 500px;
-        @include media ('<desktop'){
-          margin-right: 0;
-          max-width: 700px;
-          margin-bottom: 20px;
-        }
-      }
-      h2 {
-        font-family: "sen-bold";
-        font-size: 40px;
-      }
-      &__subtitle {
-        max-width: 450px;
-        @include media ('<desktop'){
-          max-width: 700px;
-        } 
-      }
-    }
-    // content
-    .c-service-content {
       width: 100%;
-      &__wrapper {
-        justify-content: space-between;
-        display: flex;
-        width: 100%;
-        @include media ('<desktop'){
-          flex-direction: column;
-          align-items: center;
-          }
+      @include media("<desktop") {
+        flex-direction: column;
+        align-items: center;
       }
-        &__item {
-          width: 100%;
-          padding: 0 10px 0 10px;
-          max-width: 320px;
-          @include media ('<desktop'){
-            width: 100%;
-            margin-bottom: 40px;
-            max-width: 700px;
-            } 
-        }
-        &__service-card {
-          background-color: $c-black;
-          justify-content: center; 
-          align-items: center; 
-          border-radius: 10px;
-          margin-bottom: 50px;
-          position: relative;
-          min-height: 350px;
-          overflow: hidden;     
-          color: $c-white;
-          display: flex;
-          width: 100%;
-        }
     }
+    &__item {
+      width: 100%;
+      padding: 0 10px 0 10px;
+      max-width: 320px;
+      @include media("<desktop") {
+        width: 100%;
+        margin-bottom: 40px;
+        max-width: 700px;
+      }
+    }
+    &__service-card {
+      background-color: $c-black;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      margin-bottom: 50px;
+      position: relative;
+      min-height: 350px;
+      overflow: hidden;
+      color: $c-white;
+      display: flex;
+      width: 100%;
+    }
+  }
 }
