Updated about-us files

--- a/about-us.pug
+++ b/about-us.pug
@@ -5,7 +5,7 @@ block title
 
 block content
   +header()
-  +section-banner-adventure()
+  +banner-adventure()
   +section-advantages()
   +section-establishment()
   +section-contact-us()
