--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -15,6 +15,7 @@ $f-sen-regular: "Sen-Regular", sans-serif;
 // Font size
 $fs-soc-icon: 30;
 $fs-base: 16;
+$fs-lowRes:13;
 $fs-sub: 18;
 $fs-h2: 45;
 $fs-h1: 62;
