--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -5,6 +5,10 @@
   &__wrapper {
     margin: 130px auto 0 auto;
 
+    @include media ('<phone'){
+      margin: 130px auto 0 auto;
+    }
+
     &--width-mode {
       .c-banner {
         &__info {
@@ -26,20 +30,27 @@
     max-width: 420px;
     width: 100%;
 
-    &__main-title {
+    &__title {
       font-family: "Sen-Bold";
-      font-size: $fs-h1 + px;
+      font-size: em($fs-h1);
       line-height: $lh-base;
       margin: 0 0 20px;
+
+      @include media ('<phone'){
+        font-size: em($fs-soc-icon);
+      }
     }
 
     &__sub-title {
       font-family: "Sen-Regular";
-      &__title {
         font-family: "Sen-Regular";
         font-size: $fs-sub + px;
         line-height: $lh-big;
         margin-bottom: 30px;
+
+        @include media ('<phone'){
+          font-size: em($fs-lowRes);
+        }
       }
     }
 
@@ -48,13 +59,21 @@
         max-width: 550px;
 
         &__main-title {
-          font-size: $fs-h2 + px;
+          font-size: em($fs-h2);
+
+          @include media ('<phone'){
+            font-size: em($fs-soc-icon);
+          }
         }
 
         &__sub-title {
           max-width: 420px;
+          
+          @include media ('<phone'){
+            font-size: em($fs-lowRes);
+          }
+        
         }
       }
     }
   }
-}
