--- a/about-us.pug
+++ b/about-us.pug
@@ -9,5 +9,5 @@ block content
   +section-advantages()
   +section-establishment()
   +section-about-us()
-  +section-contact-us()
+  +banner-contact-us()
   +footer()
