--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -6,6 +6,6 @@
 @import "./section-about-us";
 @import "./section-advantages";
 @import "./section-establishment";
-@import "./section-contact-us";
+@import "./banner-contact-us";
 @import "./service-card";
 @import "./loading";
