--- a/src/_includes/components/index.pug
+++ b/src/_includes/components/index.pug
@@ -7,7 +7,7 @@ include ./banner-home-start
 include ./section-services
 include ./section-about-us
 include ./section-establishment
-include ./section-contact-us
+include ./banner-contact-us
 include ./section-advantages
 include ./service-card
 include ./banner-info-covid
