fixed service car

--- a/scss/components/_service-card.scss
+++ b/scss/components/_service-card.scss
@@ -1,7 +1,7 @@
 .c-service-card {
   &__wrapper {
     width: 100%;
-    font-size: 40px;
+    font-size: em($fs-h2);
     font-family: "Sen-Bold";
   }
   &__number {
@@ -10,20 +10,15 @@
     top: 15px;
   }
   &__title {
-    font-size: 40px;
     text-align: center;
   }
-  .e-logo {
-    width: fit-content;
-    height: fit-content;
+  &__icon {
+    width: 200px;
+    height: 200px;
     padding: 5px;
     position: absolute;
     right: -50px;
     bottom: -100px;
-    .icon {
-      width: 200px;
-      height: 200px;
-    }
   }
 }
 #icon-rectangle {
