--- a/about-us.css
+++ b/about-us.css
@@ -635,6 +635,16 @@ svg {
           animation: rotate 20s infinite linear;
 }
 
+.e-icon {
+  width: 100%;
+  height: 100%;
+}
+
+.e-icon__svg {
+  width: 100%;
+  height: 100%;
+}
+
 .e-link {
   -webkit-transition: 0.35s cubic-bezier(0.4, 0, 0.2, 1);
   transition: 0.35s cubic-bezier(0.4, 0, 0.2, 1);
@@ -1303,7 +1313,7 @@ svg {
 
 .c-service-card__wrapper {
   width: 100%;
-  font-size: 40px;
+  font-size: 2.8125em;
   font-family: "Sen-Bold";
 }
 
@@ -1314,26 +1324,16 @@ svg {
 }
 
 .c-service-card__title {
-  font-size: 40px;
   text-align: center;
 }
 
-.c-service-card .e-logo {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
+.c-service-card__icon {
+  width: 200px;
+  height: 200px;
   padding: 5px;
   position: absolute;
   right: -50px;
   bottom: -100px;
-}
-
-.c-service-card .e-logo .icon {
-  width: 200px;
-  height: 200px;
 }
 
 #icon-rectangle {
