--- a/src/_includes/components/banner-contact-us.pug
+++ b/src/_includes/components/banner-contact-us.pug
@@ -2,7 +2,7 @@ mixin banner-contact-us(args)
 
 
 
-  .c-section-contact-us
+  .c-banner-contact-us
     +banner({
         style: 'background-position: 0px 0px, 80% 50%; background-image: linear-gradient(360deg, rgb(34, 34, 34), rgba(34, 34, 34, 0)), url(./assets/images/section-contact-us.jpg)',
         infoHeader: 'Need Help?',
