--- a/src/_includes/components/section-about-us.pug
+++ b/src/_includes/components/section-about-us.pug
@@ -2,51 +2,51 @@ mixin section-about-us()
   .c-section-about-us   
     .c-section-about-us__wrapper  
         +photocard({
-          src: '../../../assets/img/ann.png',
+          src: .'./assets/img/ann.png',
           alt: 'girl',
           photoCardName: 'Anna Bondarenko'
         })
 
         //- Друга колонка
         +photocard({
-          src: '../../../assets/img/dmytro.png',
+          src: './assets/img/dmytro.png',
           alt: 'boy',
           photoCardName: 'Dmytro Fedin'
         })
 
         //- Третя колонка
         +photocard({
-          src: '../../../assets/img/sergii.png',
+          src: './assets/img/sergii.png',
           alt: 'boy',
           photoCardName: 'Serhii Trytenko'
         })
 
         +photocard({
-          src: '../../../assets/img/tatjana.png',
+          src: './assets/img/tatjana.png',
           alt: 'boy',
           photoCardName: 'Tatjana Bezkorovaina'
         })
 
         +photocard({
-          src: '../../../assets/img/pavlo.png',
+          src: './assets/img/pavlo.png',
           alt: 'boy',
           photoCardName: 'Pavlo Baliasnikov'
         })
 
         +photocard({
-          src: '../../../assets/img/alex.png',
+          src: './assets/img/alex.png',
           alt: 'boy',
           photoCardName: 'Aleksei Pavlenko'
         })
 
         +photocard({
-          src: '../../../assets/img/shtepa+.png',
+          src: './assets/img/shtepa+.png',
           alt: 'boy', 
           photoCardName: 'Anastasiia Shtepa'
         })
 
         +photocard({
-          src: '../../../assets/img/vitalii.png',
+          src: './assets/img/vitalii.png',
           alt: 'boy', 
           photoCardName: 'Vitaly Liuklian'
         })
