--- a/scss/elements/_index.scss
+++ b/scss/elements/_index.scss
@@ -4,4 +4,5 @@
 @import "./burger-menu";
 @import "./button";
 @import "./social-link";
-@import './photocard'
+@import './photocard';
+@import './form-pop-up';
