--- a/index.css
+++ b/index.css
@@ -4,14 +4,12 @@
   font-weight: 700;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Sen-Regular";
   src: url("./assets/fonts/sen/Sen-Regular.woff2") format("woff2"), url("./assets/fonts/sen/Sen-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
-
 /********************************* Core ******************************/
 [data-tooltip] {
   position: relative;
@@ -402,7 +400,8 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+}
 
 h1,
 h2,
@@ -411,13 +410,15 @@ h4,
 h5,
 h6 {
   padding: 0;
-  margin: 0; }
+  margin: 0;
+}
 
 body {
   background-color: #fff;
   font-size: 16px;
   font-family: "Sen-Regular", sans-serif;
-  color: #fff; }
+  color: #fff;
+}
 
 .icon {
   display: inline-block;
@@ -434,32 +435,34 @@ body {
   background-color: rgba(242, 82, 82, 0.3);
 }
 
-
 *::selection {
-  background-color: rgba(242, 82, 82, 0.3); }
+  background-color: rgba(242, 82, 82, 0.3);
+}
 
 *::-webkit-scrollbar {
   border-radius: 10px;
   position: relative;
   z-index: 999;
-  width: 6px; }
+  width: 6px;
+}
 
 *::-webkit-scrollbar-track {
   box-shadow: inset 0 0 3px rgba(242, 82, 82, 0);
   background-color: rgba(38, 38, 38, 0.6);
 }
 
-
 *::-webkit-scrollbar-thumb {
   box-shadow: inset 0 0 3px #262626;
   background-color: #262626;
-  outline: none; }
+  outline: none;
+}
 
 .wrapper {
   max-width: 1300px;
   padding: 0 50px;
   margin: 0 auto;
-  width: 100%; }
+  width: 100%;
+}
 
 a {
   text-decoration: none;
@@ -471,15 +474,18 @@ a:hover {
 ul {
   list-style: none;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+}
 
 img,
 svg {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+}
 
 .l-common {
-  padding-top: 75px; }
+  padding-top: 75px;
+}
 
 .e-logo {
   width: 100%;
@@ -587,10 +593,12 @@ svg {
   color: #fff;
   transition: 0.35s cubic-bezier(0.4, 0, 0.2, 1);
 }
-  .e-social-link__link {
-    font-size: 30px; }
-  .e-social-link:hover {
-    color: #f2505d; }
+.e-social-link__link {
+  font-size: 30px;
+}
+.e-social-link:hover {
+  color: #f2505d;
+}
 
 .loading {
   background: #141414;
@@ -607,15 +615,20 @@ svg {
   right: 0;
   top: 45%;
   bottom: 0;
-  display: block; }
-  @media (max-width: 767px) {
-    .loading {
-      font-size: 60pt;
-      height: 90px; } }
-  @media (max-width: 479px) {
-    .loading {
-      font-size: 40pt;
-      height: 80px; } }
+  display: block;
+}
+@media (max-width: 767px) {
+  .loading {
+    font-size: 60pt;
+    height: 90px;
+  }
+}
+@media (max-width: 479px) {
+  .loading {
+    font-size: 40pt;
+    height: 80px;
+  }
+}
 
 .loading-2 {
   top: 300px;
@@ -623,26 +636,89 @@ svg {
   height: 97px;
   font-size: 0;
   background: rgba(255, 255, 255, 0.06);
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 .ff {
   position: absolute;
   font-size: 12pt;
   top: -20px;
   color: white;
-  line-height: 12pt; }
+  line-height: 12pt;
+}
 
 .loading-2-text {
   background-image: url("./assets/images/red.jpeg");
   width: 473px;
   height: 97px;
-  display: inline-block; }
+  display: inline-block;
+}
+
+@-webkit-keyframes wave-animation {
+  0% {
+    background-position: 0 bottom;
+  }
+  100% {
+    background-position: 200px bottom;
+  }
+}
 
 @keyframes wave-animation {
   0% {
-    background-position: 0 bottom; }
+    background-position: 0 bottom;
+  }
   100% {
-    background-position: 200px bottom; } }
+    background-position: 200px bottom;
+  }
+}
+@-webkit-keyframes loading-animation {
+  0% {
+    background-size: 200px 0px;
+  }
+  100% {
+    background-size: 200px 200px;
+  }
+}
+@keyframes loading-animation {
+  0% {
+    background-size: 200px 0px;
+  }
+  100% {
+    background-size: 200px 200px;
+  }
+}
+.wave {
+  background-image: url("./assets/images/red.jpeg");
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  color: rgba(0, 0, 0, 0);
+  text-shadow: 0px 0px rgba(255, 255, 255, 0.06);
+  -webkit-animation: wave-animation 2s infinite linear, loading-animation 5s infinite linear alternate;
+          animation: wave-animation 2s infinite linear, loading-animation 5s infinite linear alternate;
+  background-size: 200px 100px;
+  background-repeat: repeat-x;
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .wave {
+    -webkit-animation: wave-animation 2s infinite linear, loading-animation 7.5s infinite linear alternate;
+            animation: wave-animation 2s infinite linear, loading-animation 7.5s infinite linear alternate;
+  }
+}
+@media (max-width: 479px) {
+  .wave {
+    -webkit-animation: wave-animation 2s infinite linear, loading-animation 10s infinite linear alternate;
+            animation: wave-animation 2s infinite linear, loading-animation 10s infinite linear alternate;
+  }
+}
+
+.wave-2 {
+  -webkit-background-clip: initial;
+  -moz-background-clip: initial;
+  background-clip: initial;
+  display: inline-block;
+}
 
 .c-header {
   position: fixed;
@@ -652,61 +728,74 @@ svg {
   width: 100%;
   height: 75px;
   background-color: #f25252;
-  z-index: 10; }
-  .c-header__wrapper {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto; }
-  .c-header__logo {
-    width: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-  .c-header__navigation {
-    width: fit-content;
-    height: 50px; }
-    .c-header__navigation__wrapper {
-      height: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center; }
+  z-index: 800;
+}
+.c-header__wrapper {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+}
+.c-header__logo {
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.c-header__navigation {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 50px;
+}
+.c-header__navigation__wrapper {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .c-footer {
   min-height: 200px;
-  background-color: #222222; }
-  .c-footer__wrapper {
-    max-width: 1300px;
-    padding: 0 50px;
-    margin: 0 auto;
-    width: 100%; }
-  .c-footer__logo {
-    width: 200px;
-    height: 75px; }
-    .c-footer__logo__wrapper {
-      width: 100%;
-      height: 100%; }
+  background-color: #222222;
+}
+.c-footer__wrapper {
+  max-width: 1300px;
+  padding: 0 50px;
+  margin: 0 auto;
+  width: 100%;
+}
+.c-footer__logo {
+  width: 200px;
+  height: 75px;
+}
+.c-footer__logo__wrapper {
+  width: 100%;
+  height: 100%;
+}
+.c-footer__top {
+  padding-top: 25px;
+}
+@media (max-width: 479px) {
   .c-footer__top {
-    padding-top: 25px; }
-    @media (max-width: 479px) {
-      .c-footer__top {
-        flex-direction: column;
-        align-items: center; } }
+    flex-direction: column;
+    align-items: center;
+  }
+}
 
 .c-navigation__list {
   display: flex;
   justify-content: center;
-  align-items: center; }
-
+  align-items: center;
+}
 .c-navigation__item {
   min-width: 70px;
   text-align: center;
   font-size: 0.9375em;
   padding-left: 50px;
 }
-
 @media (max-width: 767px) {
   .c-navigation__list {
     width: 100%;
@@ -722,14 +811,15 @@ svg {
     text-align: center;
     transition: 0.35s cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .c-navigation__wrapper.active {
+  .c-navigation__list.active {
     right: 0;
   }
-
   .c-navigation__item {
     font-size: 1em;
     padding-left: 0;
-    margin-bottom: 15px; } }
+    margin-bottom: 15px;
+  }
+}
 
 .c-banner {
   background-size: cover;
@@ -744,11 +834,23 @@ svg {
 .c-banner__wrapper {
   margin: 130px auto 0 auto;
 }
+@media (max-width: 479px) {
+  .c-banner__wrapper {
+    padding: 0 20px;
+    margin: 230px auto 50px auto;
+  }
+}
 .c-banner__wrapper--width-mode .c-banner__info {
   max-width: 535px;
 }
 .c-banner__wrapper--width-mode .c-banner__title {
   font-size: 45px;
+}
+@media (max-width: 479px) {
+  .c-banner__wrapper--width-mode .c-banner__title {
+    font-size: 30px;
+    max-width: 100%;
+  }
 }
 .c-banner__wrapper--width-mode .c-banner__sub-title {
   max-width: 425px;
@@ -763,6 +865,12 @@ svg {
   line-height: 1.3;
   margin: 0 0 20px;
 }
+@media (max-width: 479px) {
+  .c-banner__title {
+    font-size: 30px;
+    max-width: 160px;
+  }
+}
 .c-banner__sub-title {
   font-family: "sen-regular";
   font-size: 18px;
@@ -771,30 +879,41 @@ svg {
 }
 
 .section-advantages {
-  color: black; }
-  .section-advantages__wrapper {
-    max-width: 1095px;
-    margin: 0px auto; }
-  .section-advantages__header {
-    position: relative;
-    margin-bottom: 55px;
-    padding: 0 50px; }
-  .section-advantages__title {
-    margin-top: 30px;
-    font-weight: bold;
-    font-size: 32px;
-    line-height: 54px;
-    text-align: center; }
-  .section-advantages__subtitle {
-    font-size: 16px;
-    margin-top: 20px;
-    text-align: center; }
-  .section-advantages__row {
-    flex-wrap: wrap;
-    justify-items: center;
-    display: flex;
-    margin: 0px 45px; }
-
+  color: black;
+}
+.section-advantages__wrapper {
+  max-width: 1095px;
+  margin: 0px auto;
+}
+.section-advantages__header {
+  position: relative;
+  margin-bottom: 55px;
+  padding: 0 50px;
+}
+.section-advantages__title {
+  margin-top: 30px;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 54px;
+  text-align: center;
+}
+.section-advantages__subtitle {
+  font-size: 16px;
+  margin-top: 20px;
+  text-align: center;
+}
+.section-advantages__row {
+  flex-wrap: wrap;
+  justify-items: center;
+  display: flex;
+  margin: 0px 45px;
+}
+.section-advantages__column {
+  flex: 0 0 25%;
+  padding: 0 35px;
+  margin-bottom: 15px;
+}
+@media (max-width: 1023px) {
   .section-advantages__column {
     flex: 1 0 50%;
     min-width: 250px;
@@ -823,10 +942,21 @@ svg {
 .section-establishment {
   padding: 65px 0;
 }
+@media (max-width: 1023px) {
+  .section-establishment {
+    padding: 0;
+  }
+}
 .section-establishment__wrapper {
   font-family: "sen-regular";
   max-width: 1300px;
   display: flex;
+}
+@media (max-width: 1023px) {
+  .section-establishment__wrapper {
+    padding: 0;
+    flex-direction: column;
+  }
 }
 .section-establishment__media {
   border: 1px solid black;
@@ -836,6 +966,25 @@ svg {
   color: black;
   padding: 15px;
   z-index: 2;
+}
+@media (max-width: 1023px) {
+  .section-establishment__media {
+    margin: 0;
+    padding: 10px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .section-establishment__media iframe,
+.section-establishment__media video {
+    width: 100%;
+  }
+  .section-establishment__media iframe[poster],
+.section-establishment__media video[poster] {
+    height: 100%;
+    width: 100%;
+  }
 }
 .section-establishment__media-text {
   padding: 20px 0 10px;
@@ -847,6 +996,18 @@ svg {
   border-radius: 5px;
   color: white;
   z-index: 1;
+}
+@media (max-width: 1023px) {
+  .section-establishment__meet {
+    margin-left: 0;
+    padding: 85px 45px;
+  }
+}
+@media (max-width: 479px) {
+  .section-establishment__meet {
+    margin-left: 0;
+    padding: 50px 25px;
+  }
 }
 .section-establishment__meet-title {
   font-family: "sen-bold";
