--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -20,6 +20,15 @@ $fs-h2: 45;
 $fs-h1: 62;
 $fs-h2: 45;
 
+
+$fs-soc-icon-m: 30;
+$fs-base-m: 16;
+$fs-sub-m: 18;
+$fs-h2-m: 45;
+$fs-h1-m: 30;
+$fs-h2-m: 45;
+
+
 // Line height
 $lh-base: 1.3;
 $lh-big: 1.5;
