--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -10,6 +10,11 @@
   &__wrapper {
     margin: 130px auto 0 auto;
 
+    @include media ('<phone'){
+      padding: 0 20px;
+      margin: 230px auto 50px auto;
+    }
+
     &--width-mode {
 
       .c-banner {
@@ -20,6 +25,11 @@
         
         &__title {
           font-size: $fs-h2 + px;
+
+          @include media ('<phone'){
+            font-size: $fs-h1-m + px;
+            max-width: 100%;
+          }
         }
   
         &__sub-title {
@@ -32,19 +42,24 @@
   &__info {
     max-width: 420px;
     width: 100%;
+  }
 
+  &__title {
+    font-family: "sen-bold";
+    font-size: $fs-h1 + px;
+    line-height: $lh-base;
+    margin: 0 0 20px;
 
-    &__main-title {
-      font-family: "sen-bold";
-      font-size: $fs-h1 + px;
-      line-height: $lh-base;
-      margin: 0 0 20px;
+    @include media ('<phone'){
+      font-size: $fs-h1-m + px;
+      max-width: 160px;
     }
+  }
 
-    &__title {
-      font-family: "sen-regular";
-      font-size: $fs-sub + px;
-      line-height: $lh-big;
-      margin-bottom: 30px;
-    }
+  &__sub-title {
+    font-family: "sen-regular";
+    font-size: $fs-sub + px;
+    line-height: $lh-big;
+    margin-bottom: 30px;
+  }
 }
