add favicon and plug

--- a/src/_extends/common.pug
+++ b/src/_extends/common.pug
@@ -13,7 +13,7 @@ html(lang='en')
     //- Font
     link(href='https://fonts.googleapis.com/css?family=Cabin+Condensed:700' rel='stylesheet' type='text/css')
     //- Favicon
-    link(rel="shortcut icon" href="" type="image/x-icon")
+    link(rel="shortcut icon" href="./assets/icon/favicon.ico" type="image/x-icon")
     //- Main style
     link(rel='stylesheet' href='index.css')
     block style
