--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,7 +1,3 @@
-// Normalize
-// @import "./plugins/normalize";
-// Normalize
-// @import "./plugins/bootstrap";
 // Fonts
 @import "./fonts";
 // Media
@@ -17,4 +13,4 @@
 // All style
 @import "./elements/index";
 @import "./components/index";
-@import "./keyframes"
+@import "./keyframes";
