--- a/scss/plugins/_index.scss
+++ b/scss/plugins/_index.scss
@@ -1,8 +1,8 @@
-//  Bootstrap
-// @import './bootstrap/bootstrap';
-
+//- Bootstrap
+// @import "./bootstrap/bootstrap";
+//- Fontawesome
+// @import "../../node_modules/font-awesome/scss/font-awesome";
 //- Simptip tooltip
 @import "./simptip";
-
 //- Compass mixins
 @import "../../node_modules/compass-mixins/lib/compass";
