--- a/scss/components/_section-establishment.scss
+++ b/scss/components/_section-establishment.scss
@@ -1,5 +1,5 @@
 .section-establishment {
-  padding: 165px 0;
+  padding: 50px 0;
 
   &__wrapper {
     font-family: "Sen-Regular";
@@ -8,11 +8,11 @@
   }
 
   &__media {
-    border: 1px solid black;
-    background-color: white;
+    box-shadow: 1px 1px 25px 0px rgba($c-darker-grey, 0.3);
+    background-color: $c-white;
     border-radius: 5px;
-    margin: 50px 0;
-    color: black;
+    margin: 100px 0;
+    color: $c-darker-grey;
     padding: 15px;
     z-index: 2;
 
@@ -23,10 +23,10 @@
 
   &__meet {
     padding: 85px 50px 85px 225px;
-    background-color: black;
+    background-color: $c-darker-grey;
     margin-left: -175px;
     border-radius: 5px;
-    color: white;
+    color: $c-white;
     z-index: 1;
 
     &-title {
