--- a/src/_includes/components/section-establishment.pug
+++ b/src/_includes/components/section-establishment.pug
@@ -2,14 +2,14 @@ mixin section-establishment()
   section.section-establishment
     .section-establishment__wrapper.wrapper
       .section-establishment__media
-        p.section-establishment__media-text Classic
-        iframe(width="500" height="350" src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1")
-        p.section-establishment__media-text My day in 9 seconds
-        video(width="500" height="250" controls poster="./assets/images/poster1.jpg")
-          source(type="video/mp4" src="./assets/media/day.mp4")
-        p.section-establishment__media-text Music for mood
+        p.section-establishment__media-text 
+        iframe(width="500" height="280" src="https://www.youtube.com/embed/m0L7Dp_hkyE" title="YouTube video player" frameborder="0" allow="accelerometer clipboard-write encrypted-media gyroscope picture-in-picture" allowfullscreen)
+        p.section-establishment__media-text 
+        video(width="500" height="280" controls)
+          source(type="video/mp4" src="./assets/media/video-2.mp4")
+        p.section-establishment__media-text 
         audio(controls)
-          source(type="audio/mp3" src="./assets/media/ylvis-thefox.mp3")
+          source(type="audio/mp3" src="./assets/media/song.mp3")
       .section-establishment__meet
         h4.section-establishment__meet-title Meet the Owners
         br
